--- a/Web.Statu/Views/Data/Hledat.cshtml
+++ b/Web.Statu/Views/Data/Hledat.cshtml
@@ -121,54 +121,8 @@
 }
 
 
-<div class="text-center">
-    <ul class="pagination pagination-lg">
-        @{
-            string qid = Url.RequestContext.HttpContext.Request.QueryString["Page"] as string;
-            int page = 0;
-            string firstPageClass = "";
-            string lastPageClass = "";
+@SearchResults.Pagination(Url.RequestContext.HttpContext.Request, Model, null, null)
 
-            if (!Devmasters.Core.TextUtil.IsNumeric(qid))
-            {
-                firstPageClass = "disabled";
-                page = 1;
-            }
-            else
-            {
-                page = Convert.ToInt32(qid);
-                if (page <= 1)
-                {
-                    page = 1;
-                }
-            }
-            if (page == 1)
-            {
-                firstPageClass = "disabled";
-            }
-            if (Model.Total < page * Model.PageSize
-                || page * Model.PageSize >= Model.MaxResultWindow()
-                )
-            {
-                lastPageClass = "disabled";
-            }
-            Model.Page = page;
-
-        }
-        @if (string.IsNullOrEmpty(firstPageClass)) //jde jit na predchozi stranku, neni to "disabled"
-        {
-            <li class="@firstPageClass">
-                @Html.CurrentLink("« Předchozí", Model.ToRouteValues(page - 1))
-            </li>
-        }
-        @if (string.IsNullOrEmpty(lastPageClass)) //jde jit na dalsi stranku, neni to "disabled"
-        {
-            <li class="@lastPageClass">
-                @Html.CurrentLink("Následující »", Model.ToRouteValues(page + 1))
-            </li>
-        }
-    </ul>
-</div>
 
 
 @Html.Partial("_new")
