--- a/Web.Statu/Views/Home/Report.cshtml
+++ b/Web.Statu/Views/Home/Report.cshtml
@@ -140,11 +140,11 @@ XINTEXT (0->0.7mld),
                     ;
             viewCache = "0H";
             break;
-        case 28:
-            ViewBag.Title = "Nákup roušek od českých výrobců? Stát obchoduje jen se zlomkem z nich";
-            ViewBag.SocialShareText = "Jaká je slibovaná a jaká je skutečná pomoc státu v dobách koronavirové epidemie? Ve spolupráci s Rekonstrukcí státu hlídáme, kolik stát skutečně vyplatil na podpoře podnikatelům a občanům.";
+        case 29:
+            ViewBag.Title = "Které politické strany mají největší podíl na řízení státu?";
+            ViewBag.SocialShareText = "Jak dlouho zodpovídají jednotlivé politické strany za fungování státu a jednotlivé resorty? Které strany jsou tradiční a které se jimi pomalu stávají?";
             ViewBag.SubTitle = "";
-            ViewBag.SocialShareTitle = "Jaká je skutečná pomoc státu v dobách koronavirové epidemie?";
+            ViewBag.SocialShareTitle = "Které politické strany mají největší podíl na řízení státu?";
             ViewBag.SocialImage = $"https://www.hlidacstatu.cz/socialbanner/page?d={DateTime.Now.ToString("d.M.yy")}&v=" + Url.Encode(Request.Url.AbsoluteUri);
             ViewBag.OpenGraphMore = "<meta property=\"og:image:width\" content=\"1920\" />\n"
                     + "<meta property=\"og:image:height\" content=\"1080\" />"
