--- a/Web.Statu/Views/Home/Reports/28_Ministerstva.cshtml
+++ b/Web.Statu/Views/Home/Reports/28_Ministerstva.cshtml
@@ -171,10 +171,7 @@
         @{
             foreach (var r in resorty)
             {
-
-                <p>
-                    <a class="btn btn-primary btn-sm" href="/report/28?resort=@r" role="button">@r</a>
-                </p>
+                    <a class="btn btn-primary btn-sm" href="/report/28?resort=@r" role="button" style="padding:3px 10px">@r</a>
             }
 
         }
